--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lodash": "^4.5.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
-    "xml2js": "^0.4.16"
+    "ua-parser-js": "^0.7.10"
   },
   "devDependencies": {
     "babel": "^6.3.26",
