--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "jquery": "^2.2.1",
     "lodash": "^4.5.1",
     "react": "^0.14.7",
-    "react-dom": "^0.14.7",
-    "ua-parser-js": "^0.7.10"
+    "react-dom": "^0.14.7"
   },
   "devDependencies": {
     "babel": "^6.3.26",
