--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-plugin-react": "^3.16.1",
     "gulp": "^3.9.0",
     "gulp-duration": "0.0.0",
+    "gulp-gzip": "^1.2.0",
     "gulp-less": "^3.0.5",
     "gulp-minify-css": "^1.2.3",
     "gulp-notify": "^2.2.0",
