--- a/htdocs/.htaccess
+++ b/htdocs/.htaccess
@@ -16,3 +16,12 @@ RewriteRule .+ %{REQUEST_URI}.gz
     ForceType text/css
     AddEncoding x-gzip .gz
 </FilesMatch>
+
+<ifModule mod_rewrite.c>
+RewriteEngine On
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_URI} !index
+RewriteCond %{REQUEST_URI} !.*\.(css|js|html|png)
+RewriteRule (.*) index.html [L]
+</ifModule>
