--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "jquery": "^2.2.1",
     "lodash": "^4.5.1",
     "react": "^0.14.7",
-    "react-dom": "^0.14.7"
+    "react-dom": "^0.14.7",
+    "react-router": "^2.0.1"
   },
   "devDependencies": {
     "babel": "^6.3.26",
