--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lodash": "^4.5.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
-    "react-router": "^2.0.1"
+    "react-router": "^2.0.1",
+    "sha1": "^1.1.1"
   },
   "devDependencies": {
     "babel": "^6.3.26",
